src/objects/vlocity_ins__VlocityDataPackConfiguration__mdt.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__ActivateLimit__c</fullName>
        <label>Activate Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActivateService__c</fullName>
        <label>Activate Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActivateType__c</fullName>
        <label>Activate Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DefaultActivateLimit__c</fullName>
        <label>Activate Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DefaultActivateService__c</fullName>
        <label>Activate Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DefaultExportLimit__c</fullName>
        <label>Export Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DefaultExportService__c</fullName>
        <label>Export Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DefaultImportLimit__c</fullName>
        <label>ImportLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DefaultImportPostProcess__c</fullName>
        <label>Default Import Post Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DefaultImportService__c</fullName>
        <label>Import Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExportLimit__c</fullName>
        <label>Export Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExportService__c</fullName>
        <label>Export Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExportType__c</fullName>
        <label>Export Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ImportLimit__c</fullName>
        <label>ImportLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ImportService__c</fullName>
        <label>Import Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ImportType__c</fullName>
        <label>Import Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimarySObjectType__c</fullName>
        <label>Primary SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ValidateService__c</fullName>
        <label>Validate Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ValidateType__c</fullName>
        <label>Validate Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Data Pack Configuration</label>
    <pluralLabel>Vlocity Data Pack Configuration</pluralLabel>
</CustomObject>